<resources>
    <string name="app_name">My App</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="registration">Registration</string>
    <string name="do_you_hava_user_name_and_pasword">Do you hava user name and pasword ?</string>
    <string name="todo">TODO</string>
</resources>